# mg_tron

./: .gitignore  CHANGELOG.md  README.md  card_config.ini  helpers.py  interface.py  long_save.json  mg_tron_gui.py  mg_tron_presets.json  mg_tron_script_1.py  neighborhood_list.txt  pyproject.toml  quick_save.json  requirements.txt  scan_wifi.py  setup.cfg  setup.py
.github/workflows/: update_pypi.yml
_configs/: mission_alpha.ini  mission_bravo.ini  mission_delta.ini  mission_echo.ini  mission_fox.ini
db/: long_save.json
src/gui/: find_dev.sh  helpers.py  interface.py  mg_tron_gui.py  neighborhood_list.py  quick_save.json  requirements.txt  wifi_scan_result.txt
src/gui/_configs/: card_1.ini  card_2.ini  card_3.ini  card_4.ini  card_5.ini  card_6.ini  card_7.ini  card_8.ini  card_config.ini  mission_charlie.ini  mission_fox.ini
src/gui/db/: long_save.json  quick_save.json
src/tests/: __init__.py  test_helpers.py  test_interface.py
