[metadata]
name = mgtron
version = 0.9.0
author = Hunter, Christerpher
author_email = djhunter67@gmail.com
description = GUI for propriety signal generator
long_description = file: README.md, CHANGELOG.md, LICENSE.rst
long_description_content_type = text/markdown
url = https://github.com/mg_tron
project_urls =
    Bug Tracker = https://github.com/mg_tron/issues
classifiers =
    Programming Language :: Python :: 3
    Framework :: DearPyGUI
    License :: Propriety
    Operating System :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
included_package_data = True

[options.entry_points]
console_scripts = 
    executable-name = 

[options.packages.find]
where = src